--- a/portfolio.html
+++ b/portfolio.html
@@ -13,18 +13,18 @@
 }
 body{
 	background-color: #001334;
-	background-image: url("mario_background.jpg");
+	background-image: url("img/mario_background.jpg");
 	background-size: 100%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-position: 100% 100%; 
 }
 .navbar{
-	background-image: url("darkblue.png");
+	background-image: url("img/darkblue.png");
 	
 }
 .nav-item{
-	background-image: url("mario_cloud.png");
+	background-image: url("img/mario_cloud.png");
 	background-size: 100% 100%;
 	width: 200px;
 	height: 100px;
@@ -45,7 +45,7 @@ body{
 	color: #FCBCB0;
 }
 .about_c{
-	background-image: url("holder.png");
+	background-image: url("img/holder.png");
 	background-size: 100% 100%;
 	margin-bottom: 2%;
 }
@@ -127,7 +127,7 @@ body{
 	<h3 class="text-center about">Contact</h3>
 	<div class="row">
 	  <div class="col-lg-4 ml-auto">
-		<p class="lead">fortunevalitova@gmail.com</p>
+		<p class="lead">reachme@gmail.com</p>
 	  </div>
 	  <div class="col-lg-4 mr-auto">
 		<p class="lead"></p>
